--- a/.env
+++ b/.env
@@ -5,38 +5,38 @@ APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
 DB_CONNECTION=pgsql
-DB_HOST=hiyik.com
-DB_PORT=5434
-DB_DATABASE=db_iek_v13
-DB_USERNAME=dbrw
-DB_PASSWORD=DbReadWrite1801~
+DB_HOST=
+DB_PORT=
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
 
 DB_CONNECTION_NOTIFY=pgsql
-DB_HOST_NOTIFY=hiyik.com
-DB_PORT_NOTIFY=5434
-DB_DATABASE_NOTIFY=db_iek_notify_v13
-DB_USERNAME_NOTIFY=dbrw
-DB_PASSWORD_NOTIFY=DbReadWrite1801~
+DB_HOST_NOTIFY=
+DB_PORT_NOTIFY=
+DB_DATABASE_NOTIFY=
+DB_USERNAME_NOTIFY=
+DB_PASSWORD_NOTIFY=
 
 #DB_CONNECTION_PRODUCT_TRACE=pgsql
-#DB_HOST_TBPRODUCT=hiyik.com
-#DB_PORT_TBPRODUCT=5434
-#DB_DATABASE_TBPRODUCT=db_iek_product_v12
-#DB_USERNAME_TBPRODUCT=dbrw
-#DB_PASSWORD_TBPRODUCT=DbReadWrite1801~
+#DB_HOST_TBPRODUCT=
+#DB_PORT_TBPRODUCT=
+#DB_DATABASE_TBPRODUCT=
+#DB_USERNAME_TBPRODUCT=
+#DB_PASSWORD_TBPRODUCT=
 
 #DB_CONNECTION_PRODUCT=pgsql
-#DB_HOST_PRODUCT=hiyik.com
-#DB_PORT_PRODUCT=5434
-#DB_DATABASE_PRODUCT=db_iek_v13
-#DB_USERNAME_PRODUCT=dbrw
-#DB_PASSWORD_PRODUCT=DbReadWrite1801~
+#DB_HOST_PRODUCT=
+#DB_PORT_PRODUCT=
+#DB_DATABASE_PRODUCT=
+#DB_USERNAME_PRODUCT=
+#DB_PASSWORD_PRODUCT=
 
 FILE_CONNECTION=ftp
-FILE_HOST=hiyik.com
-FILE_PORT=21
-FILE_USER=iekFtp
-FILE_PASSWORD=IekFtp1801~
+FILE_HOST=
+FILE_PORT=
+FILE_USER=
+FILE_PASSWORD=
 FILE_ROOT=
 
 BROADCAST_DRIVER=log
@@ -44,8 +44,8 @@ CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
 
-REDIS_HOST=hiyik.com
-REDIS_PASSWORD=iekRedis~
+REDIS_HOST=
+REDIS_PASSWORD=
 REDIS_PORT=6379
 REDIS_DEFAULT=0
 REDIS_SESSION=1
@@ -54,14 +54,12 @@ REDIS_SESSION=1
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mxhichina.com
 MAIL_PORT=465
-MAIL_USERNAME=hiyik@hiyik.com
-MAIL_PASSWORD=Iek123456
+MAIL_USERNAME=
+MAIL_PASSWORD=
 MAIL_ENCRYPTION=ssl
 
 PUSHER_APP_ID=
 PUSHER_KEY=
 PUSHER_SECRET=
-HIYIK_WEB_URL = https://hiyik.com
-#http://192.168.0.18:8092
-MANAGE_WEB_URL = http://192.168.0.2:8099
-#http://192.168.0.18:8093
+HIYIK_WEB_URL = 
+MANAGE_WEB_URL = 
